tests/contract_testcases/substrate/functions/global_functions_03.sol

        function x() override {}
        
// ---- Expect: diagnostics ----
// error: 2:22-30: only functions in contracts can override
